15994
```scala
Welcome to Scala version 2.9.0.r24400-b20110307102044

scala> (1 to 10).par
res5: scala.collection.parallel.immutable.ParRange = ParRange(1, 2, 3, 4, 5, 6, 7, 8, 9, 10)

scala> (1L to 10).par
<console>:8: error: value par is not a member of scala.collection.immutable.NumericRange.Inclusive[Long]
       (1L to 10).par
                  ^

scala> ('a' to 'z').par
<console>:8: error: value par is not a member of scala.collection.immutable.NumericRange.Inclusive[Char]
       ('a' to 'z').par
                    ^

scala> (BigInt(1) to 10).par
<console>:8: error: value par is not a member of scala.collection.immutable.NumericRange.Inclusive[BigInt]
       (BigInt(1) to 10).par
                         ^
```
